@@ -17,12 +17,12 @@ public class Main {
 		Viewrs.add(new Gafanhoto("V1",18,"M","SSA@gmail.com"));
 		Viewrs.add(new Gafanhoto("V2",22,"F","F22@gmail.com"));
 
-		Visualizacao visu = new Visualizacao(videosDoYT.get(0),Viewrs.get(0));
+		Visualizacao visu = new Visualizacao(videosDoYT.getFirst(),Viewrs.get(0));
 		visu.avaliar(BigDecimal.valueOf(90));
 
 
 
-		visu = new Visualizacao(videosDoYT.get(0),Viewrs.get(1));
+		visu = new Visualizacao(videosDoYT.getFirst(),Viewrs.get(1));
 		visu.avaliar(BigDecimal.valueOf(90));
 
 		System.out.println();
